# Deploy-Service

./: .dockerignore  .env.dev  .env.prod  .env.test  .gitignore  Dockerfile  Dockerfile.control_node  Dockerfile.node  Makefile  README.md  docker-compose-nodes.yml  docker-compose.yml  implementation_plan.md  k3s-redis.yaml  pyproject.toml  requirements.txt  ssh-command.md  test_range.py
.github/workflows/: test.yml
ansible/: .gitignore  Dockerfile  Makefile  README.md  ansible.cfg  requirements.yml  run-ansible.sh
ansible/playbooks/: clock.yml  clock_tick.yml  fail.yml  ping.yml
app/: main.py
app/api/: router.py
app/clients/: inventory_client.py
app/core/: config.py  dependencies.py  exceptions.py  log_renderer.py  log_viewer_template.py  logging.py  login_template.py  redis_client.py  security.py
app/domain/: command.py  models.py  pipeline_models.py
app/repositories/: __init__.py  bastion_mapping_repository.py  cluster_node_lookup_repository.py  command_state_repository.py  gitlab_auth_repository.py  gitlab_pipeline_repository.py  host_resolver.py  inventory_repository.py  json_user_repository.py  pipeline_repository.py  ssh_auth_repository.py  ssh_cert_auth_repository.py  ssh_key_auth_repository.py  trace_cache_repository.py  user_repository.py  vm_repository.py
app/services/: auth_service.py  command_executor.py  command_lifecycle.py  command_pool.py  command_service.py  command_ssh.py  command_state_helpers.py  command_trace.py  deploy_service.py  inventory_service.py  pipeline_builder.py
data/: SSH-cluster1.json  SSH-default.json  allow-commands-admin.json  allow-commands-cluster_proxy.json  gitlab_auth.json  users.json
docs/arch/: ansible-runner-future-work.md  ansible-runner.md  ssh-command.md
docs/plans/: 2026-05-18-host-type-resolver.md
docs/specs/: 2026-05-16-downstream-pipelines-design.md  2026-05-18-host-type-resolver-design.md
docs/term/: ssh-command.md
fake-api/: main.py
fake-api/data/: bastion-cluster-mappings-type1.json  bastion-cluster-mappings-type2.json  (+3 more)
rest_client/: ansible.http  auth.http  command.http  deploy.http
scripts/: setup_ssh_nodes.sh
tests/: conftest.py
(+82 files in other folders)
