[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deploy-service"
version = "0.1.0"
description = "Deploy Service API — FastAPI clean architecture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<0.137.0",
    "uvicorn[standard]>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "python-gitlab>=4.0.0",
    "ansi2html>=1.9.2",
    "asyncssh>=2.14.0",
    "redis>=5.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-env>=1.1.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
]

[tool.uv]
# uv creates .venv inside the project directory automatically.
# Run: uv sync --group dev
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v -m 'not e2e'"
markers = [
    "e2e: end-to-end tests requiring real Redis + docker SSH nodes; skipped unless RUN_E2E=1",
]

[tool.pytest_env]
APP_ENV = "test"
